--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>3D-модель Автоматического Полива</h2>
     <model-viewer 
-        src="aula_13_-_irrigador_automatico.glb" 
+        src="autopoliv.glb" 
         ar 
         ar-modes="webxr scene-viewer quick-look"
         camera-controls 
