--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web AR: Авто-Полив</title>
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/1.7.2/aframe/build/aframe-ar.min.js"></script>
 </head>
-<body>
-    <h2>3D-модель Автоматического Полива</h2>
-    <model-viewer 
-        src="autopoliv.glb" 
-        ar 
-        ar-modes="webxr scene-viewer quick-look"
-        camera-controls 
-        auto-rotate 
-        style="width: 100%; height: 500px;">
-    </model-viewer>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs>
+        <!-- Маркер (изображение схемы) -->
+        <a-marker preset='custom' type='pattern' url='marker.patt'>
+            <!-- 3D-модель -->
+            <a-entity position="0 0 0" scale="0.1 0.1 0.1"
+                gltf-model="avtopoliv.glb">
+            </a-entity>
+        </a-marker>
+
+        <a-entity camera></a-entity>
+    </a-scene>
 </body>
 </html>
